typescript/checker/tests/conformance/parser/ecmascript5/FunctionDeclarations/parserFunctionDeclaration1.ts.stderr
error: TS1038
 --> $DIR/tests/conformance/parser/ecmascript5/FunctionDeclarations/parserFunctionDeclaration1.ts:2:3
  |
2 |   declare function F();
  |   ^^^^^^^

